--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>jboss-seam-ui</artifactId>
     <url>http://jboss.com/products/seam/taglib</url>
     <name>Seam JSF Controls</name>
-    <version>2.2.2.Brite</version>
+    <version>2.2.3-SNAPSHOT</version>
 
 	<properties>
 		<!-- General properties -->
